[gd_scene load_steps=7 format=3 uid="uid://bvo2gpnemt07h"]

[ext_resource type="Theme" uid="uid://dglrjf5f1gth3" path="res://assets/text_box/text_box.tres" id="1_4foeq"]
[ext_resource type="Script" path="res://interacts/textbox_with_options.gd" id="1_xmn1y"]
[ext_resource type="FontFile" uid="uid://bek1ov0c2vxqv" path="res://assets/text_box/Genealogy1-ldpV.ttf" id="2_v62d6"]
[ext_resource type="FontFile" uid="uid://bw3od5p7wgib5" path="res://assets/text_box/MedievalTimeline-DOPRE.ttf" id="3_kxk3m"]
[ext_resource type="Theme" uid="uid://s2hfp1tjfol4" path="res://assets/text_box/2-dialogue.tres" id="4_kqjxn"]

[sub_resource type="FontVariation" id="FontVariation_cxvtd"]
base_font = ExtResource("2_v62d6")

[node name="TextBox" type="CanvasLayer"]
script = ExtResource("1_xmn1y")

[node name="TextBoxContainer" type="MarginContainer" parent="."]
offset_top = 700.0
offset_right = 1600.0
offset_bottom = 900.0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="Panel" type="Panel" parent="TextBoxContainer"]
texture_filter = 1
layout_mode = 2
theme = ExtResource("1_4foeq")

[node name="MarginContainer" type="MarginContainer" parent="TextBoxContainer/Panel"]
layout_mode = 0
offset_right = 1246.0
offset_bottom = 203.0
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 69
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="TextBoxContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="start" type="Label" parent="TextBoxContainer/Panel/MarginContainer/HBoxContainer"]
texture_filter = 1
texture_repeat = 1
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_cxvtd")
theme_override_font_sizes/font_size = 51
text = "Q"

[node name="Label" type="Label" parent="TextBoxContainer/Panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(1013, 126)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_kxk3m")
theme_override_font_sizes/font_size = 25
text = "Hello my peasant, welcome to my castle! :)"
autowrap_mode = 2

[node name="end" type="Label" parent="TextBoxContainer/Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_cxvtd")
theme_override_font_sizes/font_size = 38
text = "J"

[node name="OptionsContainer" type="MarginContainer" parent="."]
offset_top = 620.0
offset_right = 1600.0
offset_bottom = 670.0

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsContainer"]
layout_mode = 2

[node name="FirstOptionPanel" type="Panel" parent="OptionsContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_kqjxn")

[node name="MarginContainer" type="MarginContainer" parent="OptionsContainer/HBoxContainer/FirstOptionPanel"]
layout_mode = 0
offset_left = 17.0
offset_top = 12.0
offset_right = 605.0
offset_bottom = 47.0

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsContainer/HBoxContainer/FirstOptionPanel/MarginContainer"]
layout_mode = 2

[node name="Selected" type="Label" parent="OptionsContainer/HBoxContainer/FirstOptionPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_kxk3m")
theme_override_font_sizes/font_size = 30
text = "+"

[node name="Label" type="Label" parent="OptionsContainer/HBoxContainer/FirstOptionPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_kxk3m")
theme_override_font_sizes/font_size = 20
text = "Hello my peasant, welcome to my castle! :)"

[node name="SecondOptionPanel" type="Panel" parent="OptionsContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_kqjxn")

[node name="MarginContainer" type="MarginContainer" parent="OptionsContainer/HBoxContainer/SecondOptionPanel"]
layout_mode = 0
offset_left = 17.0
offset_top = 9.0
offset_right = 605.0
offset_bottom = 47.0

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsContainer/HBoxContainer/SecondOptionPanel/MarginContainer"]
layout_mode = 2

[node name="Selected" type="Label" parent="OptionsContainer/HBoxContainer/SecondOptionPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_kxk3m")
theme_override_font_sizes/font_size = 30
text = "+"

[node name="Label" type="Label" parent="OptionsContainer/HBoxContainer/SecondOptionPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_kxk3m")
theme_override_font_sizes/font_size = 20
text = "Hello my peasant, welcome to my castle! :)"
